Forth commit for issue-management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#My Local Evironment
+
+server.port=8000
+
+#Datasource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/issuemanagement
+spring.datasource.username=postgres
+spring.datasource.password=ahmethkaya
+spring.jpa.show-sql=true
+
+#CodeFirst,DbFirst
+spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+
+
